--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     background-image: url(/images/splash.jpg);
     background-position: top center;
     background-repeat: no-repeat;
-    background-size: 114%;
+    background-size: 1440px auto;
     margin: 0;
     padding: 0;
 }
@@ -56,13 +56,10 @@ button:active{
     border-radius: 25px;
     outline: none;
 }
-.game{
-background-color: green;
-}
 
 .buttonDiv{
     position: absolute;
-    top: 515px;
+    top: 532.5px;
     margin: 0 auto;
     text-align: center;
     width: 100%;
@@ -73,6 +70,10 @@ background-color: green;
 }
 .spacer{
     height: 75px;
+}
+.spacerTop{
+    height: 15px;
+    margin: 0;
 }
 
 .col-4{
